--- a/demo-Rmd.Rmd
+++ b/demo-Rmd.Rmd
@@ -2,12 +2,16 @@
 ---
 title: "An example R Markdown file"
 subtitle: "Illustrating use of R, bash, Python, and Julia code chunks"
-author: "Christopher Paciorek"
-date: "February 2022"
 bibliography: refs.bib
 format:
   pdf: default
   html: default
+    theme: cosmo
+    css: assets/styles.css
+    toc: true
+    code-copy: true
+    code-block-bg: true
+    code-block-border-left: "#31BAE9" 
 ---
 
 ```{r chunksetup, include=FALSE} 
