--- a/demo.qmd
+++ b/demo.qmd
@@ -10,18 +10,25 @@ format:
   html:
     include-before-body:
      - file: macros.md
+    theme: cosmo
+    css: assets/styles.css
+    toc: true
+    code-copy: true
+    code-block-bg: true
+    code-block-border-left: "#31BAE9" 
 ipynb-shell-interactivity: all
+code-overflow: wrap
 ---
 
 ```{r, chunksetup}
 #| include: false
-# include any code here you don't want to show up in the document,
-# e.g., package and dataset loading
+# Include any code here you don't want to show up in the document,
+# e.g., package and dataset loading.
 
 require(ggplot2)
 set.seed(1)
 
-# also a good place to set global chunk options
+# This is also a good place to set global chunk options.
 
 library(knitr) # need this for opts_chunk command
 opts_chunk$set(fig.width = 5, fig.height = 5)
