--- a/index.qmd
+++ b/index.qmd
@@ -1,8 +1,19 @@
 ---
 title: Creating Dynamic Documents
 subtitle: Embedding Code Chunks in Scientific Documents
-layout: default
-author: Christopher Paciorek
+date: 2024-10-31
+format:
+  html:
+    theme: cosmo
+    css: assets/styles.css
+    toc: true
+    code-copy: true
+    code-block-bg: true
+    code-block-border-left: "#31BAE9" 
+engine: knitr
+ipynb-shell-interactivity: all
+code-overflow: wrap
+
 ---
 
 # Creating dynamic documents
